Revert "Merge branch 'qa' into dev/guillermo"
This reverts commit e78cd2b485f03362190aeb1e49fc65c6c7af2c20, reversing
changes made to 22c4bebaeb0eda40f892c42632689a0f0db467db.