@@ -19,8 +19,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.apache.commons:commons-text:1.12.0'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -39,8 +37,4 @@ bootJar {
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
-
-test {
-	jvmArgs '-ea', '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
 }
